--- a/simple-mediasoup/package.json
+++ b/simple-mediasoup/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simple-mediasoup",
   "version": "1.0.0",
-  "description": "Zoom clone using webRTC and WebSockets",
+  "description": "mediasoup test",
   "keywords": [],
   "author": "",
   "license": "ISC",
